--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,95 @@
 <html>
 
-</html>
-
 <head>
-    <title>DVOPS - Resource Management Web App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DVOPS - Student Management Web App</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/updatecourse.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
-    Welcome to my Resource Management Web Application. In this application, users
-    will get to manage resources.
+<body onload="viewCourses()">
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <img src="images/course_logo.png">
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#courseModal">
+                    Add Course
+                </button>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <table class="table table-striped table-striped-custom">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Code</th>
+                                <th>Description</th>
+                                <th>Credits</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody id="tableContent">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Update Modal -->
+    <div class="modal fade" id="editCourseModal" tabindex="-1" role="dialog" aria-labelledby="editCourseModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editCourseModalLabel">Edit Course</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Course Name</label>
+                            <input type="text" class="form-control" id="Editname" placeholder="Enter Course name">
+                        </div>
+                        <div class="form-group">
+                            <label for="code">code</label>
+                            <input type="text" class="form-control" id="Editcode" placeholder="Enter Course code">
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <input type="text" class="form-control" id="Editdescription"
+                                placeholder="Enter short description">
+                        </div>
+                        <div class="form-group">
+                            <label for="credits">Credits</label>
+                            <select name="credits" id="Editcredits">
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                        </div>
+                        <p align="right" id="editMessage" class=""></p>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="updateButton" onclick="updateCourse()">Update Course</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
