--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,66 @@
 <html>
 
-</html>
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DVOPS - Resource Management Web App</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/frontend_js_aiman.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
-    Welcome to my Resource Management Web Application. In this application, users
-    will get to manage resources.
-</body>
+<body> 
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editResourceModal">
+        Edit Student
+    </button>
+
+    <div class="modal fade" id="editResourceModal" tabindex="-1" role="dialog" aria-labelledby="editResourceModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editResourceModalLabel">Edit Student</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="studentId">Student ID: </label>
+                            <input type="text" class="form-control" id="editId" placeholder="Enter Student ID">
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Student Name</label>
+                            <input type="text" class="form-control" id="editName" placeholder="Enter Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="location">Age</label>
+                            <input type="text" class="form-control" id="editAge" placeholder="Enter Age">
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Course</label>
+                            <input type="text" class="form-control" id="editcourse" placeholder="Enter Course">
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Email</label>
+                            <input type="text" class="form-control" id="editemail" placeholder="Enter Email">
+                        </div>
+                        <p align="right" id="editMessage" class=""></p>
+                    </form>
+                </div>
+                
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="updateButton" onclick="updateStudent()">Update Student</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </body>
 
 </html>
