--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,78 @@
 <html>
 
-</html>
-
 <head>
-    <title>DVOPS - Resource Management Web App</title>
-</head>
 
-<body>
-    Welcome to my Resource Management Web Application. In this application, users
-    will get to manage resources.
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DVOPS - Student Management Web App</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/addcourse_hasan.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body> 
+
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <img src="images/course_logo.png">
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#courseModal">
+                    Add Course
+                </button>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="courseModalLabel" aria-hidden="true">
+
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="courseModalLabel">Add New Course</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Course Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter course name">
+                        </div>
+                        <div class="form-group">
+                            <label for="code">Course Code</label>
+                            <input type="text" class="form-control" id="code" placeholder="Enter course code">
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <input type="text" class="form-control" id="description"
+                                placeholder="Enter short description">
+                        </div>
+                        <div class="form-group">
+                            <label for="credits">Credits</label>
+                            <select name="credits" id="credits">
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                        </div>
+                        <p align="right" id="message" class=""></p>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="addCourse()">Add New Course</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
