--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <p>Hello</p>
     <button onclick="window.location.href='addstudent_affan.html'">Add new Student</button>
     <button onclick="window.location.href='viewstudent_affan.html'">View all Students</button>
 </body>
