--- a/instrumented/index.html
+++ b/instrumented/index.html
@@ -123,7 +123,7 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <label for="name">Course Name</label>
+                            <label for="name">YIZHONG</label>
                             <input type="text" class="form-control" id="name" placeholder="Enter course name">
                         </div>
                         <div class="form-group">
